--- a/kode-intership-2025-react/package.json
+++ b/kode-intership-2025-react/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.0",
     "@tanstack/react-query": "^5.67.1",
+    "@types/redux-persist": "^4.3.1",
     "axios": "^1.8.1",
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
@@ -21,6 +22,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
