--- a/kode-intership-2025-react/package.json
+++ b/kode-intership-2025-react/package.json
@@ -18,6 +18,7 @@
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
