--- a/kode-intership-2025-react/package.json
+++ b/kode-intership-2025-react/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.67.1",
     "@types/redux-persist": "^4.3.1",
     "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
