--- a/kode-intership-2025-react/package.json
+++ b/kode-intership-2025-react/package.json
@@ -17,9 +17,12 @@
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
     "gh-pages": "^6.3.0",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
