--- a/kode-intership-2025-react/package.json
+++ b/kode-intership-2025-react/package.json
@@ -28,6 +28,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-scan": "^0.2.14",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.15"
   },
