--- a/kode-intership-2025-react/package.json
+++ b/kode-intership-2025-react/package.json
@@ -20,6 +20,7 @@
     "gh-pages": "^6.3.0",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
+    "knip": "^5.46.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
